--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 }
 
 group 'org.example'
+
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -12,6 +13,10 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.testng:testng:7.1.0'
+    implementation 'org.webjars.npm:jsonparse:1.3.1'
+    implementation 'com.github.ramalapure:json-parser:1.1'
+    implementation 'com.yashoid:jsonparsable:1.0.4'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -22,7 +27,12 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'javax.servlet:jstl'											// JSTL
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'			// JSP 탬플릿 엔진
-    implementation 'org.springframework.security:spring-security-taglibs'		// Security 태그 라이브러리
+    implementation 'org.springframework.security:spring-security-taglibs'
+    implementation 'org.apache.commons:commons-exec:1.3'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation('org.projectlombok:lombok')
+    implementation('org.apache.httpcomponents:httpclient:4.5')
+    annotationProcessor('org.projectlombok:lombok')
 
 }
 
