--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,17 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.server.port = 8080
+spring.server.servlet.context-path= /blog
+spring.server.servlet.encoding.charset = UTF-8
+spring.server.servlet.enabled=true
+spring.server.servlet.force=true
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+spring.devtools.restart.enabled = true
+spring.jpa.open-in-view=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.use-new-id-generator-mappings= false
+spring.jackson.serialization.fail-on-empty-beans= false
