게시판 글쓰기 , 페이징 , 수정,  삭제

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.server.port = 8080
-spring.server.servlet.context-path= /blog
+spring.server.servlet.context-path= /
 spring.server.servlet.encoding.charset = UTF-8
 spring.server.servlet.enabled=true
 spring.server.servlet.force=true
